client/src/components/Header/header.scss
@import "../../../global/global.scss";

.header_container {
  background-image: url("https://d1ytdcprkw2jhh.cloudfront.net/background1.jpg");
  height: 100vh;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7);
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding-left: 4em;
  padding-right: 4em;

  a {
    color: #fff;
  }

  .header_heading {
    display: flex;
    justify-content: center;
    color: #fff;

    h1 {
      justify-content: center;
      align-items: center;
      align-self: center;
      display: flex;
      font-family: "Montserrat", sans-serif;
      font-size: 2.3em;
      text-align: center;
      flex-wrap: wrap;
      font-weight: bold;
      text-transform: uppercase;
      border-bottom: 2px solid #fff;
      padding-bottom: 0.4em;
    }
  }

  .header_heading2 {
    display: flex;
    justify-content: center;
    color: #fff;
    font-family: "Montserrat", sans-serif;
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 0.5em;
    text-align: center;
    margin-top: 1.5em;
    line-height: 2em;
    margin-bottom: 3em;
  }

  .header_icons {
    color: #fff;
    display: flex;
    flex-direction: column;
    justify-content: center;
    letter-spacing: 0.5em;
    font-family: "Montserrat", sans-serif;
    font-weight: bold;
    text-transform: uppercase;
    margin-top: 1em;
    width: 100%;

    .iconLinks {
      display: flex;
      justify-content: center;
    }

    .githubContainer {
      display: flex;
      justify-content: center;
      border-radius: 4px;

      border: 1px solid white;
      box-sizing: border-box;
      // width: fit-content;
      // width: -webkit-fit-content;
      // width: -moz-fit-content;
      align-items: center;
      align-self: center;
    }

    .github {
      display: flex;
      margin-right: 1em;
      div {
        text-align: right;
        color: #fff;
        cursor: pointer;
      }
    }

    .linkedinContainer {
      display: flex;
      justify-content: center;
      border-radius: 4px;
      box-sizing: border-box;
      border: 1px solid #fff;
      align-items: center;
      align-self: center;
      // width: fit-content;
      // width: -webkit-fit-content;
      // width: -moz-fit-content;
    }
    .linkedin {
      display: flex;
      margin-right: 1em;
      div {
        text-align: right;
        color: #fff;
        cursor: pointer;
      }
    }

    .resumeContainer {
      display: flex;
      justify-content: center;
      border-radius: 4px;
      box-sizing: border-box;
      border: 1px solid #fff;
      align-items: center;
      align-self: center;

      .resume {
        display: flex;
        margin-right: 1em;
        div {
          text-align: right;
          color: #fff;
          cursor: pointer;
        }
      }
    }
  }
}

//mobile
@media only screen and (max-width: 425px) {
  .header_container {
    background-attachment: initial;
  }

  .header_icons {
    font-size: 0.8em;

    .githubContainer {
      padding-top: 0.8em;
      padding-bottom: 0.8em;
      margin-bottom: 1em;
      margin-top: 0.5em;
    }

    .linkedinContainer {
      padding-top: 0.8em;
      padding-bottom: 0.8em;
      margin-bottom: 1em;
    }

    .resumeContainer {
      padding-top: 0.8em;
      padding-bottom: 0.8em;
    }
  }
}

//tablets
@media only screen and (min-width: 426px) and (max-width: 960px) {
  .header_container {
    .header_heading {
      h1 {
        font-size: 4em;
      }
    }

    .header_icons {
      display: flex;
      flex-direction: row;
      margin-top: 5em;

      .iconLinks {
        padding-right: 1em;
      }

      #resumeIcon {
        padding-right: 0;
      }

      .githubContainer {
        padding: 1em;
      }

      .linkedinContainer {
        padding: 1em;
      }

      .resumeContainer {
        padding: 1em;
      }

      .github {
        div {
          text-align: right;
          color: #fff;
          cursor: pointer;
        }
      }
      .linkedin {
        div {
          text-align: left;
          color: #fff;
          cursor: pointer;
        }
      }

      .resume {
        div {
          text-align: left;
          color: #fff;
          cursor: pointer;
        }
      }
    }
  }
}

@media only screen and (min-width: 961px) {
  .header_container {
    .header_heading {
      h1 {
        font-size: 6em;
      }
    }

    .header_icons {
      display: flex;
      flex-direction: row;

      .iconLinks {
        padding-right: 1em;
      }

      #resumeIcon {
        padding-right: 0;
      }

      .githubContainer {
        padding: 1em;
      }

      .linkedinContainer {
        padding: 1em;
      }

      .resumeContainer {
        padding: 1em;
      }

      .github {
        div {
          text-align: right;
          color: #fff;
          cursor: pointer;
        }
      }
      .linkedin {
        div {
          text-align: left;
          color: #fff;
          cursor: pointer;
        }
      }
      .resume {
        div {
          text-align: left;
          color: #fff;
          cursor: pointer;
        }
      }
    }
  }
}

